fix(aiAgent): guidance library broken layout (#6244)

--- a/src/pages/aiAgent/components/AiAgentView/AiAgentView.less
+++ b/src/pages/aiAgent/components/AiAgentView/AiAgentView.less
@@ -1,7 +1,7 @@
 :local {
-    // The `:global(.container-fluid)` explicitly targets the navbar component from reactstrap
-    // This will force this style to overwrite the one from Bootstrap
-    :global(.container-fluid).container {
+    // This style might be deprecated, I don't see any changes when I remove it
+    // but I'll leave it here for now just in case
+    .container {
         display: grid;
         grid-template-columns: minmax(480px, 1000px) 1fr;
         padding: 0;
